[package]
name = "core-to-core-latency"
description = "Measures CPU core-to-core latency"
repository = "https://github.com/lhlh06/core-to-core-latency"
license = "MIT"
readme = "README.md"
version = "1.3.0"
edition = "2024"
exclude = ["/results"]

[dependencies]
core_affinity = "0.8"
quanta = "0.12"
clap = { version = "4", features = ["derive"] }
ndarray = "0.17"
ansi_term = "0.12"
ordered-float = "5"
crossbeam-utils = { version = "0.8", default-features = false }
raw-cpuid = "11"
